--- a/menu.html
+++ b/menu.html
@@ -20,7 +20,7 @@
       </div>
     </div>
 <!--header-->
-<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;" id="home">
+<header class="w3-display-container w3-content w3-wide" style="width:100%" id="home">
   <img class="w3-image" src="./imagenes/fondocontacto.jpg" alt="ceviche" width="1600" height="800" >
   <div class="w3-display-bottomleft w3-padding-large w3-opacity">
     <h1 class="w3-xxlarge">Ostion Ceviche & Mar</h1>
