--- a/contacto.html
+++ b/contacto.html
@@ -35,7 +35,7 @@
     </form><!-- Google Map -->
   </div>
   <p class="w3-text-blue-grey w3-large"><b> Centro Comercial Calima Avenida Centenario Local 206, Centenario, Armenia, Quindío</b></p>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3977.298026467169!2d-75.6629025!3d4.540273!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e38f4561a888ab9%3A0xa7d710c09c33657b!2sCalima!5e0!3m2!1ses-419!2sco!4v1500847311992" class="w3-grayscale" width="100%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3977.298026467169!2d-75.6629025!3d4.540273!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e38f4561a888ab9%3A0xa7d710c09c33657b!2sCalima!5e0!3m2!1ses-419!2sco!4v1500847311992"  width="100%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 
   <!-- Footer -->
